network/6/native/policy-1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-6-1
  namespace: np-6-gateway
spec:
  podSelector:
    matchLabels:
      app: gateway-v1
  policyTypes:
  - Egress
  egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: np-6-backend   
      ports:
      - protocol: TCP
        port: 8080
